# Voxymore

./: .gitignore  .gitmodules  CMakeLists.txt  Project.vxm  README.md  imgui.ini
.github/workflows/: cmake.yml
EditorAssets/: TestScene.vxm
EditorAssets/Scenes/: BuoyancyTest.vxm  SampleScene.vxm
EditorAssets/Shaders/: FlatColor.glsl
EditorShaders/: DefaultShader.glsl  TextureShader.glsl
Systems/: CameraControllerSystem  GravitySystem.vxm  ParticleDragSystem.vxm  SpringForceSystem.vxm
assets/: CMakeLists.txt
assets/fonts/: CMakeLists.txt
assets/fonts/OpenSans/: CMakeLists.txt
assets/shaders/: FlatColor.glsl  TextureShader.glsl
include/Voxymore/Editor/: EditorLayer.hpp
include/Voxymore/Editor/Panels/: PropertyPanel.hpp  SceneHierarchyPanel.hpp  SystemPanel.hpp
src/: EditorLayer.cpp  Voxengine.cpp
src/Editor/: EditorLayer.cpp
src/Editor/Panels/: PropertyPanel.cpp  SceneHierarchyPanel.cpp  SystemPanel.cpp
